tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__EvensmallGlowsto-AAAAAAAAAAAAAAAAAAAHtA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1972,
  "prerequisites": [
    54,
    479
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've been to the nether and gathered Glowstone, you can use that for light as well. You can color it to make the block color change (unfortunately 1.7.10 does not support colored lights) or you can use the Forge Microblocks saw to cut it up into tiny nooks to light up areas without taking up much space.\n\nThere are also various glowing plants you can find or breed, such as glowflowers.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Even small Glowstone shines bright",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54,
    479
  ],
  "rewards": [],
  "tasks": []
}
