tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ExcavationUpgrad-Avz75EgSTdG48xI3HPGUMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5193298880840700976,
  "prerequisites": [
    176,
    10002568955781911106
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mining out large chunks of stone can be a huge pain when it comes to creating bases. Why not craft the excavator upgrade for your Prototype Matter Manipulator so that you have the ability to remove blocks quickly?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Excavation Upgrade",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    10002568955781911106
  ],
  "rewards": [],
  "tasks": []
}
