tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__FindingFlowers-AAAAAAAAAAAAAAAAAAAHoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1953,
  "prerequisites": [
    1952
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To start, you'll need to find some flowers. Then take your trowel and use it on some dirt blocks to turn it into soil. Next place your flowers on the soil to turn them into Botany flowers. If you've reached MV tier, check out the How to Be(e) tab for info on Genetics.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Finding Flowers",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1952
  ],
  "rewards": [],
  "tasks": []
}
